--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ ul,li,a{
 #home_page #page_inner #text_area p.title a{ 
   cursor: pointer;
   font-family: 'Archivo Black', sans-serif;
-  display: block;;
+  display: inline-block;
   margin-top: 20px; font-size: 20px; font-weight: 700;
   color:#fff;
     /* 애니메이션 이름 */
@@ -58,7 +58,7 @@ ul,li,a{
     animation-duration: leaner;  
     animation-fill-mode: forwards;
 }
-#home_page #page_inner #text_area p.title:hover a{
+#home_page #page_inner #text_area p.title a:hover{
   color:#333;
 }
 
